--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "file-loader": "^0.8.5",
     "json-loader": "^0.5.4",
     "react-hot-loader": "^1.3.0",
+    "react-redux": "^4.0.0",
+    "redux": "^3.0.4",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.12",
