--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is demo project",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node ./node_modules/karma/bin/karma start karma.conf",
     "devserver": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8090 --host 0.0.0.0"
   },
   "author": "Novak Max",
@@ -15,15 +15,27 @@
     "jquery": "*"
   },
   "devDependencies": {
-    "autoprefixer-loader": "*",
     "babel": "5.x",
+    "babel-jest": "^18.0.0",
     "babel-loader": "5.*",
     "css-loader": "^0.22.0",
+    "expect": "^1.13.0",
     "file-loader": "^0.8.5",
     "json-loader": "^0.5.4",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "1.0.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.0.1",
+    "karma-mocha-reporter": "^2.2.1",
+    "karma-sourcemap-loader": "^0.3.6",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^3.2.0",
+    "postcss-loader": "*",
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
+    "redux-mock-store": "^1.2.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.12",
