--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "Novak Max",
   "license": "ISC",
   "dependencies": {
+    "jquery": "*",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
-    "jquery": "*"
+    "react-redux-firebase": "^1.2.3"
   },
   "devDependencies": {
     "autoprefixer-loader": "3.2.0",
