--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "redux-mock-store": "^1.2.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
+    "vis": "^4.18.1",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1"
   }
