Update package.json and improve the webpack config

--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   },
   "devDependencies": {
     "autoprefixer-loader": "3.2.0",
-    "babel": "5.x",
+    "babel": "^6.5.2",
     "babel-jest": "^18.0.0",
-    "babel-loader": "5.*",
+    "babel-loader": "^5.4.2",
+    "babel-polyfill": "^6.22.0",
     "classnames": "^2.2.5",
     "css-loader": "^0.22.0",
     "expect": "^1.13.0",
@@ -39,6 +40,7 @@
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
     "redux-mock-store": "^1.2.1",
+    "source-map": "^0.5.6",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.12",
