--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "jquery": "*",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
-    "react-redux-firebase": "^1.2.3"
+    "react-redux-firebase": "^1.2.3",
+    "reduce-reducers": "^0.1.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "3.2.0",
